Fix for cropped code illustration bug

--- a/css/local-styles.css
+++ b/css/local-styles.css
@@ -3,6 +3,7 @@
 	height: 480px;
 	overflow: hidden;
 	margin: 0 auto;
+	position: relative;
 }
 
 .slides .code-illustration img {
